tests/baselines/reference/classExtendsMultipleBaseClasses.errors.txt
classExtendsMultipleBaseClasses.ts(3,19): error TS1174: Classes can only extend a single class.


==== classExtendsMultipleBaseClasses.ts (1 errors) ====
    class A { }
    class B { }
    class C extends A,B { }
                      ~
!!! error TS1174: Classes can only extend a single class.